# omx-ik-act-hybrid-control

./: .dockerignore  .gitignore  .gitmodules  README.md
config/: 99-omx-openrb.rules  omx_f_config.yaml  omx_f_infer_config.yaml
docker/: Dockerfile.jazzy  compose.yaml  physical_ai_tools_compose.yaml
omx_cyclo_safe_controller/: CMakeLists.txt  README.md  package.xml
omx_cyclo_safe_controller/config/: omx_safe_config.yaml
omx_cyclo_safe_controller/launch/: omx_safe_controller.launch.py
omx_cyclo_safe_controller/src/: omx_safe_movel_controller_node.cpp
omx_ik_act_bringup/: CMakeLists.txt  package.xml
omx_ik_act_bringup/config/: camera1_info.yaml  camera2_info.yaml  camera3_info.yaml  omx_config.yaml  omx_f_follower_ai_initial_positions.yaml  omx_movel_ik_config.yaml  params_1.yaml  params_2.yaml  params_3.yaml  yolo.yaml
omx_ik_act_bringup/launch/: omx_controller.launch.py  omx_f_follower_ai.launch.py  omx_movel_ik.launch.py  usb_cameras.launch.py  yolo.launch.py
omx_ik_act_relay/: package.xml  setup.cfg  setup.py
omx_ik_act_relay/config/: ik_act_relay.yaml
omx_ik_act_relay/launch/: ik_act_relay.launch.py
omx_ik_act_relay/omx_ik_act_relay/: ik_act_relay_node.py
robot_ik_control/: package.xml  setup.cfg  setup.py
robot_ik_control/config/: robot_ik_control.yaml
robot_ik_control/launch/: robot_ik_control.launch.py
robot_ik_control/robot_ik_control/: robot_ik_control_node.py
scripts/: install_udev_rules.sh
yolo_coord_transform/: package.xml  setup.cfg  setup.py
yolo_coord_transform/config/: calibration_params.yaml  transform_params.yaml
yolo_coord_transform/launch/: calibrate.launch.py  transform.launch.py  transform_ik.launch.py
yolo_coord_transform/yolo_coord_transform/: calibration_node.py  yolo_coord_transform_node.py
