<?xml version="1.0"?>
<package format="3">
  <name>omx_cyclo_safe_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cyclo_motion_controller_core</depend>
  <depend>cyclo_motion_controller_models</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>pinocchio</depend>
  <depend>rclcpp</depend>
  <depend>robotis_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
