<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omx_ik_act_bringup</name>
  <version>0.0.0</version>
  <description>Launch and configuration files for the OMX IK/ACT workspace.</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>cyclo_motion_controller_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>open_manipulator_bringup</exec_depend>
  <exec_depend>open_manipulator_description</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>yolo_bringup</exec_depend>
  <exec_depend>yolo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
